Update Sales Data Analysis.ipynb

--- a/Sales Data Analysis.ipynb
+++ b/Sales Data Analysis.ipynb
@@ -64,7 +64,7 @@
     "tags": []
    },
    "source": [
-    "## Find and drop the NAN(s)"
+    "## Find and drop the missing values"
    ]
   },
   {
