Update Sales Data Analysis.ipynb

--- a/Sales Data Analysis.ipynb
+++ b/Sales Data Analysis.ipynb
@@ -98,7 +98,7 @@
    "id": "57ef924f-48a7-4d8f-86ee-a495f9b39b7a",
    "metadata": {},
    "source": [
-    "## Convert different columns into the necessary type"
+    "## data type conversion"
    ]
   },
   {
